<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        style="@style/Text"
        android:text="@string/sendingSMS"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/callingName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/callingName"
        style="@style/Text"
        android:text="@string/defaultName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/callingNumber"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/callingNumber"
        style="@style/Text"
        android:text="@string/defaultNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/messageText"
        app:layout_constraintTop_toBottomOf="@+id/callingName" />

    <EditText
        android:id="@+id/messageText"
        style="@style/Text"
        android:paddingTop="40dp"
        android:text="@string/defaultSMSText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonPanel"
        app:layout_constraintTop_toBottomOf="@+id/callingName"
        android:autofillHints="Hello! How are you?" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageText"
        app:layout_constraintBottom_toTopOf="@+id/space"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/sendMessage" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/decline" />
    </LinearLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPanel"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>